fix #107 : fix wrong pre-wrap value (#123)

--- a/lean4-infoview/src/infoview/index.css
+++ b/lean4-infoview/src/infoview/index.css
@@ -31,7 +31,7 @@ html,body {
 }
 
 .pre-wrap {
-    white-space: 'pre-wrap';
+    white-space: pre-wrap;
 }
 
 .error {
